@@ -4,6 +4,8 @@
     * Fix adding/removing accounts from the sidebar
     * Fix account-specific signatures and other features not working
     * Fix messages link in header not being highlighted for new messages
+    * Remove the GameFAQs clock from the header, display it in quick post only:
+      the new header update broke it, but it's more useful in quick post anyway
 
 2012-06-11:
     * version 0.8.7
